   "PBS: job killed: vmem 1234000 exceeded limit 1048576" in the output.

 o If the built-in attempts of batchtools for finding a default template file
   failes, then system("templates", package = "future.batchtools") is searched
   for template files as well.  Currently, there exists a `torque.tmpl` file.

BUG FIXES:

 o loggedOutput() for BatchtoolsFuture would always return NULL unless an error
   had occured.
   

Version: 0.5.0 [2017-06-02]

 o First version submitted to CRAN.
 
SOFTWARE QUALITY:

 o Added more tests; test coverage now at 93%.
 

Version: 0.4.0 [2017-05-16]

NEW FEATURES:

 o Added batchtools_custom() for specifying batchtools futures using any type
   of batchtools cluster functions.
   
 o batchtools_template(pathname = NULL, type = <type>) now relies on the
   batchtools package for locating the <type> template file.
   
 o nbrOfWorkers() for batchtools futures now defaults to +Inf unless the
   evaluator's 'workers' or 'cluster.functions' specify something else.

 o Renamed argument 'pathname' to 'template' for batchtools_<tmpl>() functions.

BUG FIXES:
   
 o Under plan(batchjobs_*), when being created futures would produce an error
   on "all(is.finite(workers)) is not TRUE" due to an outdated sanity check.

SOFTWARE QUALITY:

 o TESTS: Added test of future_lapply() for batchtools backends.

 o TESTS: Added optional tests for batchjobs_* HPC schedulers listed in
   environment variable 'R_FUTURE_TESTS_STRATEGIES'.

CODE REFACTORING:

 o CLEANUP: Package no longer depends on R.utils.

 
Version: 0.3.0 [2017-03-19]

NEW FEATURES:

 o The number of jobs one can add to the queues of HPC schedulers is in
   principle unlimited, which is why the number of available workers for such
   batchtools_* backends is reported as +Inf.  However, as the number of
   workers is used by future_lapply() to decide how many futures should be used
   to best partition the elements, this means that future_lapply() will always